syntax = "proto3";

package pbf;

service Router {
  rpc ReqCall (ReqArg) returns (RespMsg) {}
}

message ReqArg {
  string Uid = 1;
  int32 MsgID = 2;
  bytes Payload = 3;
}

message RespMsg {
  int32 MsgID = 1;
  int32 Code = 2;
  bytes Payload = 3;
}

message QueueMsg {
  bytes Data = 1;
  Target Targets = 2;
}

message Target {
  string GroupId = 1;
  repeated string Uids = 2;
  repeated string UnlessUids = 3;
}
